tests/negative/gold/export_show_test.gold
tests/negative/export_show_test.toit:5:28: error: Unresolved show 'foo'
import .export_show_a show foo
                           ^~~
tests/negative/export_show_test.toit:6:8: error: Unresolved export 'foo'
export foo
       ^~~
Compilation failed.
